# stravaweekly-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
src/: activity_list.rs  app_config.rs  app_error.rs  app_session.rs  app_state.rs  auth_client.rs  cookie_manager.rs  domain.rs  index.rs  main.rs  router_setup.rs  secret_value.rs  serve_static.rs  session_data.rs  tokens.rs
src/strava_api/: http_calls.rs  mod.rs  strava_auth.rs  strava_routes.rs
static/: list_activities.html
templates/: activity_list.html  not_authenticated.html
